<resources>
    <string name="app_name">Contacts List</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="retry">Retry</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="member_since">Member since</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="location_and_address">Location and address</string>
    <string name="maps_api_key">AIzaSyAPTXoOu-rV2w05F2oirVVxlYcEWLW4XIc</string>

</resources>