<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:cornerRadius="0dp"
    app:layoutDescription="@xml/motion_contact_details">

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_image"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints"
        tools:text="Ahmed Abdulrahman" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingTop="@dimen/margin_default"
        android:paddingBottom="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_default"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toEndOf="@+id/emailLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="test@mail.com" />

            <TextView
                android:id="@+id/mobileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_default"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toEndOf="@+id/mobileLabel"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel"
                tools:text="+201515236557" />

            <TextView
                android:id="@+id/memberSinceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/member_since"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileLabel" />

            <TextView
                android:id="@+id/memberSince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_default"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toEndOf="@+id/memberSinceLabel"
                app:layout_constraintTop_toBottomOf="@+id/mobileLabel"
                tools:text="01/02/2020" />

            <TextView
                android:id="@+id/dobLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memberSinceLabel" />

            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_default"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toEndOf="@+id/dobLabel"
                app:layout_constraintTop_toBottomOf="@+id/memberSinceLabel"
                tools:text="01/02/2020" />

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/location_and_address"
                android:textColor="@color/black"

                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dobLabel" />

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_default"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressLabel"
                tools:text="01/02/2020" />

            <fragment
                android:id="@+id/mapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="@dimen/margin_default"
                android:background="#00000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/contact_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:padding="16dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>